syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

message SumRequest {
    int32 first = 1;
    int32 second = 2;
}

message SumResponse {
    int32 result = 1;
}

message PrimeDecompRequest {
    int32 number = 1;
}

message PrimeDecompResponse {
    int32 result = 1;
}

service CalculatorService {
    // Unary
    rpc Sum(SumRequest) returns (SumResponse) {};

    rpc PrimeDecomp(PrimeDecompRequest) returns (stream PrimeDecompResponse) {};
}